businessTransfers/src/app/about-us/transactions/transactions.component.css
html { overflow-y: scroll; }
body { position: absolute; }

#topParagraph {
  position: relative;
  float: left;
  padding-top:5vh;
  margin-top: auto;
  margin-bottom: auto;
  display: block;
}

.slide {
  background-image:url('../../../assets/homeImage.jpg');
  min-height: 100vh;
  min-width: 100vw;
  background-attachment: fixed;
  background-position: center;
  background-repeat: repeat;
  background-size: cover;
  justify-content: center;
  position:relative;
  overflow-y: scroll;
  padding-bottom: 5%;
}

.blurred-bg-1{
  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9));
  background-repeat:repeat;
	@include background-size(cover);
	background-attachment: scroll;
}

.box{
	width:auto;
  height: auto;
	position:relative;
	border-radius:5px;
  padding:20px;
	@include box-shadow(0 20px 30px rgba(0,0,0,.6));
	border:1px solid rgba(255,255,255,.3);
	text-align: center;
	@include box-sizing(border-box);
	text-shadow:0 1px 1px rgba(0,0,0,.4);
  display: inline-flex;
  margin-top: 3vh;
  margin-left: 5vw;
  transition: box-shadow .3s ease;
  overflow: auto;
	&:active{
    @include box-shadow(0 20px 50px rgba(0,0,0,.9));
  }

  .content{
    margin: auto;
    overflow: auto;
  }
}

@media (max-width: 768px) {
  .box {
    max-width: 95vw;
    max-height: 75vh;
    overflow: auto;
    margin-top:0;
    margin-left: 0vw;
  }
  .content {
    overflow-y: scroll; /* has to be scroll, not auto */
    -webkit-overflow-scrolling: touch;
  }
  .slide {
    margin-bottom: 50px;
    overflow: auto;
    max-height: 100vh;
  }
}

h1,h2,a,p, li, table{
	color:white;
	font-weight:100;

	.tinted &{
		color:black;
		text-shadow:0 1px 1px rgba(255,255,255,.2);
    overflow: scroll;

	}
}
h2{ font-size: 14px }
p{
  margin: 20px;
  &.related{
    text-transform: uppercase;
    font-weight: 700;
    color: #444;

    a{
      font-weight: 700;
      text-decoration: none;
      &:hover{
        text-decoration: underline;
      }
    }
  }
}

.goLeft, li {
  text-align: left;
  font-size: 17px;
  font-weight: 200;
}
/*th, td { resize: both; overflow: auto; }*/
h1 {
  color : white;
  font-weight: 300;
}
p, td, tr{
  font-size: 15px;
  font-weight: 200;
}


.tg  {
  border-collapse:collapse;
  border-spacing:0;
  margin:0px auto;
}
.tg td{font-family:Arial, sans-serif;
  font-size:17px;
  padding:10px 5px;
  border-style:solid;
  border-width:1px;
  overflow:auto;
  word-break:normal;
  text-align: center;
}
.tg th{font-family:Arial, sans-serif;
  font-size:17px;
  font-weight:200;
  padding:10px 5px;
  border-style:solid;
  border-width:1px;
  overflow:auto;
  word-break:normal;
  text-align: center;
}
.tg .tg-yw4l{
  vertical-align:top
}
@media screen and (max-width: 767px) {
  .tg {width: auto !important;
  }.tg col {width: auto !important;
     }.tg-wrap {overflow-x: auto;
             -webkit-overflow-scrolling: touch;
             margin: auto 0px;
           }}

